--- a/.github/workflows/tailor-lint.yml
+++ b/.github/workflows/tailor-lint.yml
@@ -22,4 +22,6 @@ jobs:
           sudo mv tailor-0.12.0/bin/tailor /usr/local/bin/tailor
 
       - name: Run Tailor Lint
-        run: tailor
+        run: |
+          java -cp tailor-0.12.0/lib/tailor-0.12.0.jar com.sleekbyte.tailor.Main
+          tailor
