--- a/.github/workflows/tailor-lint.yml
+++ b/.github/workflows/tailor-lint.yml
@@ -24,6 +24,4 @@ jobs:
 
       - name: Run Tailor Lint
         run: |
-          cd tailor-0.12.0/
-          ls -lah ./bin
-          ./bin/tailor
+          /usr/local/bin/tailor
